# number-text-conversion-api

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  build_app_docker.sh  build_docker.sh  pyproject.toml  start.sh  start_app.sh  start_tests.sh  stop_app.sh  tests.dockerfile
src/app/: main.py  service_builder.py  settings.py
src/app/api/: router.py
src/app/api/endpoints/: __init__.py  decoder_api.py  encoder_api.py
src/app/domain/abstract_service/: encoder_decoder_service.py
src/app/domain/exception/: __init__.py
src/app/domain/models/: __init__.py  encoder_model.py
src/app/service_implementation/: __init__.py  encoder_decoder_service_impl.py
src/app/tests/: conftest.py
src/app/tests/test_api/: test_decoder.py  test_encoder.py
src/app/tests/test_service_implementation/: test_encoder_decoder_service_impl.py
