[tool.poetry]
name = "number-text-conversion-api"
version = "0.1.0"
description = "Number to text converter"
authors = ["George Krajan Godas <ggodas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
swagger2 = "^0.0.6"
uvicorn = "^0.18.2"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | lib
    | lib_dev
  )/
)
'''

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ""
force_grid_wrap = 0
known_localfolder = "apps,utils,teams_api,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
